Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -5,6 +5,9 @@
     <title></title>
   </head>
   <body>
+    @team
+    @heros
+
     <%=params[:team][:name]%><br>
     Team Motto: <%=params[:team][:motto]%><br><br>
 
