--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -5,8 +5,8 @@
     <title></title>
   </head>
   <body>
-    @team
-    @heros
+    <%=@team%>
+    <%=@heros%>
 
     <%=params[:team][:name]%><br>
     Team Motto: <%=params[:team][:motto]%><br><br>
