Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <%=@team.name, @team.motto%>
+    <%=@team.name%>
     <%=@heros%>
 
     <%=params[:team][:name]%><br>
