Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -5,8 +5,8 @@
     <title></title>
   </head>
   <body>
-    <%=@team.name%>
-    <%=@heros%>
+    <%=@team.name%><br>
+    <%=@heros%><br>
 
     <%=params[:team][:name]%><br>
     Team Motto: <%=params[:team][:motto]%><br><br>
