Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -8,7 +8,7 @@
     <%=@team.name%><br>
     Team Motto: <%=@team.motto%><br><br>
 
-    <% heros.each do |hero| %>
+    <% @heros.each do |hero| %>
       Hero Name: <%=hero.name%><br>
       Hero Power: <%=hero.power%><br>
       Hero Biography: <%=hero.bio%><br><br>
